# msgpack11

./: .buckconfig  .gitignore  .travis.yml  BUCK  CMakeLists.txt  LICENSE.txt  README.md  buckaroo.json  example.cpp  msgpack11.cpp  msgpack11.hpp  msgpack11.pc.in
.github/workflows/: ci.yml
benchmark/data/: size-1.mp  size-2.mp  size-3.mp  size-4.mp  size-5.mp
benchmark/src/: msgpack-c-pack.cpp  msgpack-c-unpack.cpp  msgpack11-pack.cpp  msgpack11-unpack.cpp
benchmark/src/common/: benchmark.c  benchmark.h  buffer.h  generator.c  generator.h  hash.h  platform.h
benchmark/src/hash/: hash-data.c  hash-object.c
benchmark/tools/: results.py
gtest/: BUCK
test/: CMakeLists.txt  array.cpp  basic.cpp  incomplete.cpp  incomplete_data.cpp  multi.cpp  object.cpp  raw.cpp
